tests/ui/get_set_all.stderr
error: `set_all` on an unit struct does nothing, because unit structs have no fields
 --> tests/ui/get_set_all.rs:3:11
  |
3 | #[pyclass(set_all)]
  |           ^^^^^^^

error: useless `set` - the struct is already annotated with `set_all`
 --> tests/ui/get_set_all.rs:9:12
  |
9 |     #[pyo3(set)]
  |            ^^^

error: `get_all` on an unit struct does nothing, because unit structs have no fields
  --> tests/ui/get_set_all.rs:14:11
   |
14 | #[pyclass(get_all)]
   |           ^^^^^^^

error: useless `get` - the struct is already annotated with `get_all`
  --> tests/ui/get_set_all.rs:20:12
   |
20 |     #[pyo3(get)]
   |            ^^^

error: aborting due to 4 previous errors
